# Sparsity

./: .clang-format  .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  bench_3d.cpp  bench_dense.cpp  bench_gpu.cpp  plot_3d.py  plot_results.py  run_benchmarks.sh
benchmarks/results/: bench_20260322_043222.json  bench_20260322_043222_gpu.json  bench_20260322_052124.json  bench_20260322_061615.json  bench_20260322_061615_gpu.json  bench_20260323_003939.json  bench_20260323_003939_3d.json  bench_20260323_003939_gpu.json  gpu_only.json
include/sparsity/: binary.h  blocked_ell.h  cuda_dense.h  cuda_sparse.h  cuda_utils.h  dense.h  dispatch.h  index.h  ivf.h  kmeans.h  metrics.h  packing.h  sparse.h  tiled_dense.h  types.h
src/core/: binary.cpp  blocked_ell.cpp  dispatch.cpp  index.cpp  ivf.cpp  kmeans.cpp  packing.cpp  sparse.cpp  tiled_dense.cpp
src/core/metrics/: cosine.cpp  l2.cpp  sparse.cpp  tanimoto.cpp
src/cuda/: sparse_dot.cu  topk.cu  transfer.cu
src/cuda/metrics/: cosine.cu  l2.cu  l2_tiled.cu  tanimoto.cu
tests/: CMakeLists.txt
tests/cuda/: CMakeLists.txt  test_cuda_metrics.cpp
tests/index/: CMakeLists.txt  test_binary_index.cpp  test_ivf.cpp  test_sparse_index.cpp  test_tiled_dense.cpp
tests/metrics/: CMakeLists.txt  test_cosine.cpp  test_l2.cpp  test_sparse_metrics.cpp  test_tanimoto.cpp
